--- a/development/css/media-queries/_mobile.scss
+++ b/development/css/media-queries/_mobile.scss
@@ -29,7 +29,7 @@
 			width: 100%;
 		}
 
-		.button.inline {
+		.button + .button {
 			margin-left: 0;
 		}
 	}
